--- a/index.css
+++ b/index.css
@@ -2,15 +2,17 @@ body{
     background-image: url('https://cdn.pixabay.com/photo/2024/08/29/10/01/nature-9006428_1280.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 100%;
 }
 .block{
     background-color: aliceblue;
     border-radius: 40px;
-    display: flex; /* Використовуємо flexbox */
-    justify-content: space-around; /* Розміщуємо елементи по горизонталі з простором між ними */
-    align-items: center; /* Вирівнюємо елементи по вертикалі */
+    display: flex; 
+    justify-content: space-around; 
+    align-items: center;
     margin: 40px auto;
-    opacity: 0.8; /* Трохи збільшуємо прозорість для кращої читабельності */
+    opacity: 0.8; 
     width: 700px;
     height: 300px;
     border: 5px solid rgb(33, 109, 67);
